<resources>
    <string name="app_name">Ascent System Evaluator</string>
    <string name="title_system_detail">System Detail</string>
    <string name="add_system">Add Systemdump</string>
    <string name="clear">Clear Items</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <color name="gray">#ffff0000</color>
    <string name="err">Error</string>
    <string name="add">Add</string>
    <string name="roids">Add Asteroids</string>
    <string name="ggs">Add Gas Giants</string>
    <string name="none"><![CDATA[<font color=\'#EE0000\'>None</font>]]></string>
    <string name="poor"><![CDATA[<font color=\'#ffcc00\'>Poor</font>]]></string>
    <string name="fertile"><![CDATA[<font color=\'#00d600\'>Fertile</font>]]></string>
    <string name="present"><![CDATA[<font color=\'#00d600\'>Present</font>]]></string>
    <string name="unknown"><![CDATA[<font color=\'#ffcc00\'>Unknown</font>]]></string>
    <string name="search">Search Systems</string>
    <string name="parse">Parsing Dump</string>
    <string name="misc">General Fields:</string>
    <string name="atmo">Atmosphere</string>
    <string name="gems">Gems</string>
    <string name="fert">Fertility (at least)</string>
    <string name="fruit">Fruit</string>
    <string name="grain">Grain</string>
    <string name="veg">Vegetables</string>
    <string name="meat">Meat</string>
    <string name="tob">Tobacco</string>
    <string name="anyfood">Has at least this many foods:</string>
    <string name="mineral">Mineral Content</string>
    <string name="al">Aluminium (Min)</string>
    <string name="carb">Carbon (Min)</string>
    <string name="fe">Iron (Min)</string>
    <string name="ti">Titanium (Min)</string>
    <string name="si">Silicon (Max)</string>
    <string name="find">Find</string>
    <string name="delSys">Delete System</string>
    <string-array name="fertility">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="foodCount">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="concentration">
        <item>0%</item>
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>
    <string-array name="invconc">
        <item>100%</item>
        <item>90%</item>
        <item>80%</item>
        <item>70%</item>
        <item>60%</item>
        <item>50%</item>
        <item>40%</item>
        <item>30%</item>
        <item>20%</item>
        <item>10%</item>
        <item>0%</item>
    </string-array>
</resources>
