<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/misc"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atmo"
            android:id="@+id/hasAtmo"
            android:layout_gravity="center"
            android:layout_weight="1" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gems"
            android:id="@+id/hasGems"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fert"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/grain"
            android:id="@+id/textView3"
            android:layout_weight="0.75"
            android:layout_gravity="center"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/grainSelect"
            android:entries="@array/fertility"
            android:layout_weight="0.25"
            android:gravity="center"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fruit"
            android:id="@+id/textView4"
            android:layout_weight="0.75"
            android:layout_gravity="center"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fruitSelect"
            android:entries="@array/fertility"
            android:layout_weight="0.25"
            android:gravity="center"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/veg"
            android:id="@+id/textView5"
            android:layout_weight="0.67"
            android:layout_gravity="center"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vegSelect"
            android:entries="@array/fertility"
            android:layout_weight="0.27"
            android:gravity="center"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/meat"
            android:id="@+id/textView6"
            android:layout_weight="0.8"
            android:layout_gravity="center"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meatSelect"
            android:entries="@array/fertility"
            android:layout_weight="0.26"
            android:gravity="center"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/anyfood"
            android:id="@+id/textView7"
            android:layout_weight="0.67"
            android:layout_gravity="center"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anySelect"
            android:entries="@array/fertility"
            android:layout_weight="0.27"
            android:gravity="center"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tob"
            android:id="@+id/textView8"
            android:layout_weight="0.8"
            android:layout_gravity="center"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tobSelect"
            android:entries="@array/fertility"
            android:layout_weight="0.26"
            android:gravity="center"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mineral"
            android:id="@+id/textView10"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/al"
            android:id="@+id/textView9"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alSelect"
            android:entries="@array/concentration"
            android:gravity="center"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/carb"
            android:id="@+id/textView11"
            android:layout_gravity="center"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carbSelect"
            android:entries="@array/concentration"
            android:gravity="center"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fe"
            android:id="@+id/textView12"
            android:layout_gravity="center"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feSelect"
            android:entries="@array/concentration"
            android:gravity="center"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ti"
            android:id="@+id/textView13"
            android:layout_gravity="center"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tiSelect"
            android:entries="@array/concentration"
            android:gravity="center"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/si"
            android:id="@+id/textView14"
            android:layout_gravity="center"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/siSelect"
            android:entries="@array/concentration"
            android:gravity="center"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:id="@+id/findBtn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cnclBtn" />
    </TableRow>

</TableLayout>